# JobLens.skill

./: .gitignore  LICENSE  README.md  SKILL.md  package.json  pyproject.toml  run.ps1
boss_zhipin_job_search/: __main__.py  app.py  auth_browser.py  auth_cookie.py  login_cmd.py
references/: analysis_prompt.md
scripts/: _analyze.py  _dedup.py  _resume_matcher.py  _token_utils.py  generate_report.py  push_daily.py  scrape_all.py
